--- a/CarMon/Resources/layout/Main.axml
+++ b/CarMon/Resources/layout/Main.axml
@@ -4,19 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
+        style="@style/GeneralButton"
         android:id="@+id/NewEntry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/NewEntry"
-        android:background="@drawable/add"
-        android:layout_marginBottom="0.0dp"
-        android:layout_marginRight="0.0dp"
-        android:gravity="center"
         android:layout_gravity="center_horizontal" />
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        style="@style/GeneralFont"
         android:id="@+id/ExpendatureList" />
 </LinearLayout>
